Fixed content overflow

--- a/Recipe Finder/src/Style.css
+++ b/Recipe Finder/src/Style.css
@@ -1,240 +1,260 @@
 html {
-    background-color: white;
+	background-color: white;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #adb5bd;
-    margin: 0 100px;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #adb5bd;
+	margin: 0 100px;
 }
 
 .ingredient-input {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
+	display: flex;
+	flex-direction: column;
+	padding: 10px;
 }
 
 .input-and-button {
-    display: flex;
-    gap: 20px;
+	display: flex;
+	gap: 20px;
 }
 
 .bottom-buttons {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 10px;
-    gap: 20px;
+	display: flex;
+	justify-content: space-evenly;
+	padding: 10px;
+	gap: 20px;
 }
 
 .search-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .list-of-recipes {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    gap: 50px 0px;
-    padding: 50px 0px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 50px;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+	gap: 50px 0px;
+	padding: 50px 0px;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 50px;
 }
 
 .recipe-information {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 0 100px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	margin: 0 100px;
 }
 
 .recipe-information h3 {
-    text-align: center;
+	text-align: center;
 }
 
 .recipe-information img {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
 .recipe-information button {
-    color: #198754;
-    font-size: 1rem;
-    font-weight: 600;
-    border: 1.5px solid #198754;
-    border-radius: 5px;
-    background-color: #f8f9fa;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 5px;
+	color: #198754;
+	font-size: 1rem;
+	font-weight: 600;
+	border: 1.5px solid #198754;
+	border-radius: 5px;
+	background-color: #f8f9fa;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	padding: 5px;
 }
 
 .recipe-information button:hover {
-    cursor: pointer;
-    background-color: #dee2e6;
+	cursor: pointer;
+	background-color: #dee2e6;
 }
 
 .header {
-    width: 100%;
-    background-color: #f8f9fa;
-    padding: 10px 0;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	width: 100%;
+	background-color: #f8f9fa;
+	padding: 10px 0;
+	text-align: center;
+	border-bottom: 1px solid #ddd;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .header h1 {
-    font-size: 2rem;
-    font-weight: 600;
-    color: #212529;
-    margin: 0px;
+	font-size: 2rem;
+	font-weight: 600;
+	color: #212529;
+	margin: 0px;
 }
 
 .input-and-button input {
-    width: 100%;
-    border: 1px solid #f8f9fa;
-    border-radius: 10px;
-    font-size: 1rem;
-    padding: 5px;
-    background-color: #f8f9fa;
-    outline: none;
+	width: 100%;
+	border: 1px solid #f8f9fa;
+	border-radius: 10px;
+	font-size: 1rem;
+	padding: 5px;
+	background-color: #f8f9fa;
+	outline: none;
 }
 
 .ingredient-input ul {
-    padding: 0;
-    margin: 0;
-    width: 207px;
-    border-top: 2px solid #ced4da;
-    border-radius: 0 0 10px 10px;
-    background-color: #f8f9fa;
-    overflow: hidden;
-    position: relative;
-    bottom: 7px;
+	padding: 0;
+	margin: 0;
+	width: 207px;
+	border-top: 2px solid #ced4da;
+	border-radius: 0 0 10px 10px;
+	background-color: #f8f9fa;
+	overflow: hidden;
+	position: relative;
+	bottom: 7px;
 }
 
 .ingredient-input li {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
 }
 
 .ingredient-input li {
-    padding: 5px;
-    cursor: pointer;
-    transition: background 0.2s ease;
+	padding: 5px;
+	cursor: pointer;
+	transition: background 0.2s ease;
 }
 
 .ingredient-input li:hover {
-    background-color: #dee2e6;
+	background-color: #dee2e6;
 }
 
 .delete {
-    color: #e23d28;
-    font-size: 2rem;
-    border: 1.5px solid #e23d28;
-    border-radius: 5px;
-    background-color: #f8f9fa;
+	color: #e23d28;
+	font-size: 2rem;
+	border: 1.5px solid #e23d28;
+	border-radius: 5px;
+	background-color: #f8f9fa;
 }
 
 .search-button {
-    color: #198754;
-    font-size: 1rem;
-    font-weight: 600;
-    border: 1.5px solid #198754;
-    border-radius: 5px;
-    background-color: #f8f9fa;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 5px;
+	color: #198754;
+	font-size: 1rem;
+	font-weight: 600;
+	border: 1.5px solid #198754;
+	border-radius: 5px;
+	background-color: #f8f9fa;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	padding: 5px;
 }
 
 .search-button:hover {
-    cursor: pointer;
-    background-color: #dee2e6;
+	cursor: pointer;
+	background-color: #dee2e6;
 }
 
 .add-button {
-    color: #43a6c6;
-    font-size: 1rem;
-    font-weight: 600;
-    border: 1.5px solid #43a6c6;
-    border-radius: 5px;
-    background-color: #f8f9fa;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding: 5px;
+	color: #43a6c6;
+	font-size: 1rem;
+	font-weight: 600;
+	border: 1.5px solid #43a6c6;
+	border-radius: 5px;
+	background-color: #f8f9fa;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	padding: 5px;
 }
 
 .add-button:hover {
-    cursor: pointer;
-    background-color: #dee2e6;
+	cursor: pointer;
+	background-color: #dee2e6;
 }
 
 .material-symbols-outlined:hover {
-    cursor: pointer;
-    background-color: #dee2e6;
+	cursor: pointer;
+	background-color: #dee2e6;
 }
 
 .recipe-card {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 100px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0px 100px;
+	overflow-y: hidden;
 }
 
 .recipe-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    width: 500px;
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+	text-align: center;
+	width: 100%;
+	max-width: 60vh;
+	max-height: 90vh;
+	overflow-y: scroll;
 }
 
 .recipe-content img {
-    max-width: 300px;
+	max-width: 300px;
 }
 
 .recipe-info {
-    display: flex;
-    justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
 
 .ingredients-list {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+	display: flex;
+	justify-content: center;
+	margin-top: 20px;
 }
 
 .ingredients-column {
-    flex: 1;
+	flex: 1;
 }
 
-.ingredients-column h3 {
-    margin: 0 1rem;
-    text-align: center;
+.ingredients-column.missing * {
+	margin: 0 1rem;
+	text-align: left;
+}
+
+.ingredients-column.used * {
+	margin: 0 1rem;
+	text-align: right;
 }
 .ingredients-column ul {
-    list-style-type: none;
-    text-align: match-parent;
-    padding: 0px;
-    margin-top: 10px;
+	list-style-type: none;
+	text-align: match-parent;
+	padding: 0px;
+	margin-top: 10px;
+}
+
+.ingredients-column.missing li {
+	text-align: left;
+	padding: 10px 0;
+	margin: 0px;
+}
+
+.ingredients-column.used li {
+	text-align: right;
+	padding: 10px 0;
+	margin: 0px;
 }
 
 .recipe-instructions li {
-    text-align: left;
-    padding: 10px;
-
+	text-align: left;
+	padding: 10px;
 }
